Updated website content

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             <h1 class="title">Sharma Parth</h1>
             <p class="section_text_p2">Mobile App Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/PARTH-Resume.pdf')">DOWNLOAD CV</button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/sharma-parth-mobile.pdf')">DOWNLOAD CV</button>
            
            
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
             </div>
             <div id="social-container">
                 <img src="./assets/linkedin.webp" alt="My Linkedin Profile" class="icon" onclick="location.href='https://linkedin.com/in/parth-sharma61/'"/>
-                <img src="/assets/github.webp" alt="My github profile" class="icon" onclick="location.href='https://github.com/'"/>
+                <img src="/assets/github.webp" alt="My github profile" class="icon" onclick="location.href='https://github.com/Parth132-cell'"/>
 
             </div>
         </div>
@@ -187,10 +187,10 @@
                 </div>
                 <h2 class="experience-sub-title project-title">Project One</h2>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Parth132-cell/millionaire_dashboard_ui'">
                         GitHub
                     </button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Parth132-cell/millionaire_dashboard_ui'">
                         Live Demo
                     </button>
                 </div>
@@ -202,10 +202,10 @@
                 </div>
                 <h2 class="experience-sub-title project-title">Project Two</h2>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/HassanGadhawala/UniSign-Frontend'">
                         GitHub
                     </button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/HassanGadhawala/UniSign-Frontend'">
                         Live Demo
                     </button>
                 </div>
